agregando cambios en tema

--- a/web/themes/custom/imparables_bb5/templates/content/node--article--teaser.html.twig
+++ b/web/themes/custom/imparables_bb5/templates/content/node--article--teaser.html.twig
@@ -99,53 +99,62 @@
 
         <div class="col-12">
           <!-- Card -->
-          <div class="card h-100">
-            <div class="shape-container">
-              <img class="card-img-top mx-auto d-block" src="{{ node.field_image[0] ? node.field_image[0].entity.uri.value | image_style('imagen_400_300') : '/themes/custom/imparables_bb5/assets/img/500x280/img1.jpg' }}" alt="Image Description">
 
-              <!-- Shape -->
-              <div class="shape shape-bottom zi-1" style="margin-bottom: -.25rem">
-                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 1920 100.1">
-                  <path fill="#fff" d="M0,0c0,0,934.4,93.4,1920,0v100.1H0L0,0z"></path>
-                </svg>
-              </div>
-              <!-- End Shape -->
-            </div>
-
-            <!-- Card Body -->
-            <div class="card-body">
-              <h3 class="card-title">
-                <a class="text-dark" href="{{ url }}" rel="bookmark">{{ label }}</a>
-              </h3>
-
-              <p class="card-text">Learn how your Google devices can do more. Learn how your Google devices can do more</p>
-            </div>
-            <!-- End Card Body -->
-
-            <!-- Card Footer -->
-            <div class="card-footer">
-              <div class="d-flex align-items-center">
-                <div class="flex-shrink-0 avatar-group avatar-group-xs">
-                  <a class="avatar avatar-xs avatar-circle" href="#" data-bs-toggle="tooltip" data-bs-placement="top" title="Nataly Gaga">
-                    <img class="avatar-img" src="/themes/custom/imparables_bb5/assets/img/160x160/img9.jpg" alt="Image Description">
-                  </a>
-                  <a class="avatar avatar-xs avatar-circle" href="#" data-bs-toggle="tooltip" data-bs-placement="top" title="Emily Milda">
-                    <img class="avatar-img" src="/themes/custom/imparables_bb5/assets/img/160x160/img8.jpg" alt="Image Description">
-                  </a>
-                </div>
-
-                <div class="flex-grow-1">
-                  <div class="d-flex justify-content-end">
-                    <p class="card-text">July 15</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- End Card Footer -->
-          </div>
           <!-- End Card -->
+
+
+<div class="card card-flush card-stretched-vertical">
+              <div class="row">
+                <div class="col-sm-6">
+                  <img class="card-img" src="{{ node.field_image[0] ? node.field_image[0].entity.uri.value | image_style('imagen_500_280') : '/themes/custom/imparables_bb5/assets/img/500x280/img1.jpg' }}" alt="Image Description">
+                </div>
+                <!-- End Col -->
+
+                <div class="col-sm-6">
+                  <!-- Card Body -->
+                  <div class="card-body">
+                    <div class="mb-2">
+                      <a class="card-link" href="#">Announcements</a>
+                    </div>
+
+                    <h3 class="card-title">
+                      <a class="text-dark" href="{{ url }}">{{ label }}</a>
+                    </h3>
+                    
+                    <p class="card-text">At Wake, our mission has always been focused on bringing openness.</p>
+                    
+                    <!-- Card Footer -->
+                    <div class="card-footer">
+                      <div class="d-flex">
+                        <div class="flex-shrink-0">
+                          <a class="avatar avatar-circle" href="./blog-author-profile.html">
+                            <img class="avatar-img" src="/themes/custom/imparables_bb5/assets/img/160x160/img9.jpg" alt="Image Description">
+                          </a>
+                        </div>
+                      
+                        <div class="flex-grow-1 ms-3">
+                          <a class="card-link link-dark" href="./blog-author-profile.html">Hanna Wolfe</a>
+                          <p class="card-text small">Feb 4, 2021</p>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Card Footer -->
+                  </div>
+                  <!-- End Card Body -->
+                </div>
+                <!-- End Col -->
+              </div>
+              <!-- End Row -->
+            </div>
+
+
+
         </div>
         <!-- End Col -->
+
+
+
+
     
   </div>
 </article>
