--- a/web/themes/custom/imparables_bb5/templates/layout/page--user.html.twig
+++ b/web/themes/custom/imparables_bb5/templates/layout/page--user.html.twig
@@ -74,248 +74,7 @@
 <div id="page-wrapper">
   <div id="page">
 
-    <!-- ========== HEADER ========== -->
-    <!-- <header id="header" class="navbar navbar-expand-lg navbar-end navbar-light" -->
-    <header id="header" class="navbar navbar-expand-lg navbar-end navbar-light navbar-sticky-top navbar-show-hide navbar-toggle border-bottom"
-      data-hs-header-options='{
-        "fixMoment": 1500,
-        "fixEffect": "slide"
-      }'>
-
-      <!-- Alert -->
-      <div class="alert alert-primary text-center rounded-0 mb-0 alert-dismissible fade show" role="alert">
-        Programa de entrenamiento para <span class="fw-semibold"><a class="link link-white" href="/nosotros">Olimpiadas de Informática Escolar</a></span>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
-      <!-- End Alert -->
-
-      <div class="container">
-        <nav class="js-mega-menu navbar-nav-wrap">
-          <!-- Default Logo -->
-          <a class="navbar-brand" href="/" aria-label="Front">
-            <img class="navbar-logo-imparables" height="45" src="/themes/custom/imparables_bb5/assets/svg/logos/radient_logo_tech4.png" alt="Logo" >
-          </a>
-          <!-- End Default Logo -->
-
-          <!-- Secondary Content -->
-          <div class="navbar-nav-wrap-secondary-content">
-            <!-- Search -->
-            <div class="dropdown dropdown-course-search d-lg-none d-inline-block">
-              <a class="btn btn-ghost-secondary btn-sm btn-icon" href="#" id="navbarCourseSearchDropdown" role="button"
-                 data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="bi-search"></i>
-              </a>
-
-              <div class="dropdown-menu dropdown-card" aria-labelledby="navbarCourseSearchDropdown">
-                <!-- Card -->
-                <div class="card card-sm">
-                  <div class="card-body">
-                    <form class="input-group input-group-merge">
-                      <input type="text" class="form-control" placeholder="What do you want to learn?" aria-label="What do you want to learn?">
-                      <div class="input-group-append input-group-text">
-                        <i class="bi-search"></i>
-                      </div>
-                    </form>
-                  </div>
-                </div>
-                <!-- End Card -->
-              </div>
-            </div>
-            <!-- End Search -->
-
-          </div>
-          <!-- End Secondary Content -->
-
-          <!-- Toggler -->
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-default">
-              <i class="bi-list"></i>
-            </span>
-            <span class="navbar-toggler-toggled">
-              <i class="bi-x"></i>
-            </span>
-          </button>
-          <!-- End Toggler -->
-
-          <!-- Collapse -->
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
- 
-              <li class="nav-item">
-                <a class="nav-link" href="/nosotros">Nosotros</a>
-              </li>
-
-              <!-- Courses -->
-              <li class="hs-has-sub-menu nav-item">
-                <a id="coursesMegaMenu" class="hs-mega-menu-invoker nav-link dropdown-toggle" href="#" role="button" aria-expanded="false">Programas</a>
-
-                <!-- Mega Menu -->
-                <div class="hs-sub-menu dropdown-menu" aria-labelledby="coursesMegaMenu" style="min-width: 40rem;">
-                <!-- <div class="hs-mega-menu dropdown-menu w-100" aria-labelledby="coursesMegaMenu">-->
-
-                  <!-- Main Content -->
-                  <div class="navbar-dropdown-menu-inner">
-                    <div class="row">
-                      <div class="col-sm-6 col-md">
-                        <span class="dropdown-header">Programas</span>
-                        <a class="dropdown-item" href="#"><i class="bi-laptop dropdown-item-icon"></i>Introducción a la Programación</a>
-                        <a class="dropdown-item" href="#"><i class="bi-code-slash dropdown-item-icon"></i>Entrenamiento USACO 2024</a>
-                        <a class="dropdown-item" href="/product/1"><i class="bi-laptop dropdown-item-icon"></i>Programación Competitiva</a>
-                        <a class="dropdown-item" href="#"><i class="bi-code-slash dropdown-item-icon"></i>Pensamiento Computacional</a>
-                      </div>
-                      <div class="col-sm-6 col-md">
-                        <span class="dropdown-header">Talleres</span>
-                        <a class="dropdown-item" href="#"><i class="bi-code-slash dropdown-item-icon"></i>Olimpiadas de Programación Escolar</a>
-                        <a class="dropdown-item" href="#"><i class="bi-laptop dropdown-item-icon"></i>Mi primera Olimpiada de Informática</a>
-                      </div>
-                    </div>
-                    <!-- End Row -->
-                  </div>
-                  <!-- End Main Content -->
-                </div>
-                <!-- End Mega Menu -->
-              </li>
-              <!-- End Courses -->
-
-              <!-- Search Form -->
-              <!--
-              <li class="nav-item flex-grow-1 d-none d-lg-inline-block ">
-                <form class="input-group input-group-merge">
-                  <div class="input-group-prepend input-group-text">
-                    <i class="bi-search"></i>
-                  </div>
-                  <input type="text" class="form-control" placeholder="¿Qué te gustaría aprender?" aria-label="¿Qué te gustaría aprender?">
-                </form>
-              </li>
-              -->
-              <!-- End Search Form -->
-
-
-              <!-- Dropdown -->
-              <li class="hs-has-sub-menu nav-item">
-                <!-- <a id="listingsDropdown" class="hs-mega-menu-invoker nav-link dropdown-toggle " href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Recursos</a>
-                <div class="hs-sub-menu hs-position-right dropdown-menu" aria-labelledby="listingsDropdown" style="min-width: 14rem;">
-                  <a class="dropdown-item " href="../demo-course/courses.html">Olimpiadas de Informática</a>
-                  <a class="dropdown-item " href="../demo-course/course-overview.html">Olimpiadas Matemáticas</a>
-                  <a class="dropdown-item " href="../demo-course/author-profile.html">Cronograma de Olimpiadas</a>
-                </div> -->
-                <a id="coursesMegaMenu" class="hs-mega-menu-invoker nav-link dropdown-toggle" href="#" role="button" aria-expanded="false">Recursos</a>
-
-                <!-- Mega Menu -->
-                <div class="hs-sub-menu dropdown-menu" aria-labelledby="coursesMegaMenu" style="min-width: 30rem;">
-                <!-- <div class="hs-mega-menu dropdown-menu w-100" aria-labelledby="coursesMegaMenu">-->
-
-                  <!-- Main Content -->
-                  <div class="navbar-dropdown-menu-inner">
-                    <div class="row">
-                      <div class="col-sm-6 col-md" style="min-width: 10rem;">
-                        <span class="dropdown-header">Comunidad</span>
-                        <a class="dropdown-item" href="#"><i class="bi-code-slash dropdown-item-icon"></i>Comunidad</a>
-                        <a class="dropdown-item" href="#"><i class="bi-code-slash dropdown-item-icon"></i>Tutoriales</a>
-                      </div>
-                      <div class="col-sm-6 col-md" style="min-width: 15rem;">
-                        <span class="dropdown-header">Juez en línea</span>
-                        <a class="dropdown-item" href="#"><i class="bi-code-slash dropdown-item-icon"></i>Juez</a>
-                        <a class="dropdown-item" href="#"><i class="bi-laptop dropdown-item-icon"></i>Juez</a>
-                      </div>
-                    </div>
-                    <!-- End Row -->
-                  </div>
-                  <!-- End Main Content -->
-                </div>
-                <!-- End Mega Menu -->
-
-
-              </li>
-              <!-- End Dropdown -->
-
-              <li class="nav-item">
-                <a class="nav-link acive" href="/blog">Novedades</a>
-              </li>
-
-            {% if not logged_in %}
-              <div class="d-inline-block ml-auto">
-                <!--
-                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbarSignup" aria-controls="offcanvasNavbarSignup">
-                  <span class="d-none d-lg-inline-block">Sign up</span>
-                  <i class="bi-person-fill d-lg-none"></i>
-                </button>-->
-                <a class="btn btn-outline-primary" href="/user/login">Ingresa</a>
-                <a class="btn btn-primary" href="/user/register">Regístrate</a>
-                
-              </div>
-            {% endif %}
-
-            {% if logged_in %}
-              <!-- Account -->
-              <li class="hs-has-sub-menu nav-item">
-                <a id="navbarShoppingCartDropdown" class="hs-mega-menu-invoker nav-link dropdown-toggle" href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false"
-                  >
-                  <img class="avatar avatar-xs avatar-circle" src="/themes/custom/imparables_bb5/assets/img/160x160/img9.jpg" alt="Image Description">
-                </a>
-
-                <div class="hs-sub-menu hs-position-left dropdown-menu" aria-labelledby="navbarShoppingCartDropdown"
-                    style="min-width: 16rem;">
-                  <a class="d-flex align-items-center p-2" href="#">
-                    <div class="flex-shrink-0">
-                      <img class="avatar" src="/themes/custom/imparables_bb5/assets/img/160x160/img9.jpg" alt="Image Description">
-                    </div>
-                    <div class="flex-grow-1 ms-3">
-                      <span class="d-block fw-semibold">Lida Reidy <span class="badge bg-primary ms-1">Pro</span></span>
-                      <span class="d-block text-muted small">lidareidy@gmail.com</span>
-                    </div>
-                  </a>
-
-                  <div class="dropdown-divider my-3"></div>
-
-                  <a class="dropdown-item" href="#">
-                  <span class="dropdown-item-icon">
-                    <i class="bi-chat-left-dots"></i>
-                  </span> Messages
-                  </a>
-                  <a class="dropdown-item" href="#">
-                  <span class="dropdown-item-icon">
-                    <i class="bi-wallet2"></i>
-                  </span> Purchase history
-                  </a>
-                  <a class="dropdown-item" href="/user">
-                  <span class="dropdown-item-icon">
-                    <i class="bi-person"></i>
-                  </span> Account
-                  </a>
-                  <a class="dropdown-item" href="#">
-                  <span class="dropdown-item-icon">
-                    <i class="bi-credit-card"></i>
-                  </span> Payment methods
-                  </a>
-
-                  <div class="dropdown-divider"></div>
-
-                  <a class="dropdown-item" href="#">
-                  <span class="dropdown-item-icon">
-                    <i class="bi-question-circle"></i>
-                  </span> Help
-                  </a>
-                  <a class="dropdown-item" href="/user/logout">
-                  <span class="dropdown-item-icon">
-                    <i class="bi-box-arrow-right"></i>
-                  </span> Log out
-                  </a>
-                </div>
-              </li>
-              <!-- End Account -->
-            {% endif %}
-
-            </ul>
-          </div>
-          <!-- End Collapse -->
-        </nav>
-      </div>
-
-
-    </header>
-    <!-- ========== END HEADER ========== -->
-
+    {{ include('@imparables_bb5/custom/header.html.twig') }}
 
     {% if page.highlighted %}
       <div class="highlighted">
@@ -522,86 +281,8 @@
     {% endif %}
     <footer class="site-footer bg-dark">
 
-    <div class="container pb-1 pb-lg-5">
-      <div class="row content-space-t-2">
-        <div class="col-lg-3 mb-7 mb-lg-0">
-          <!-- Logo -->
-          <div class="mb-5">
-            <a class="navbar-brand" href="../index.html" aria-label="Space">
-              <img class="navbar-brand-logo" src="/themes/custom/imparables_bb5/assets/svg/logos/logo-white.svg" alt="Image Description">
-            </a>
-          </div>
-          <!-- End Logo -->
 
-          <!-- List -->
-          <ul class="list-unstyled list-py-1">
-            <li><a class="link-sm link-light" href="#"><i class="bi-geo-alt-fill me-1"></i> 153 Williamson Plaza, Maggieberg</a></li>
-            <li><a class="link-sm link-light" href="tel:1-062-109-9222"><i class="bi-telephone-inbound-fill me-1"></i> +1 (062) 109-9222</a></li>
-          </ul>
-          <!-- End List -->
-        
-        </div>
-        <!-- End Col -->
-
-        <div class="col-sm mb-7 mb-sm-0">
-          <h5 class="text-white mb-3">Company</h5>
-
-          <!-- List -->
-          <ul class="list-unstyled list-py-1 mb-0">
-            <li><a class="link-sm link-light" href="#">About</a></li>
-            <li><a class="link-sm link-light" href="#">Careers <span class="badge bg-warning text-dark rounded-pill ms-1">We're hiring</span></a></li>
-            <li><a class="link-sm link-light" href="#">Blog</a></li>
-            <li><a class="link-sm link-light" href="#">Customers <i class="bi-box-arrow-up-right small ms-1"></i></a></li>
-            <li><a class="link-sm link-light" href="#">Hire us</a></li>
-          </ul>
-          <!-- End List -->
-        </div>
-        <!-- End Col -->
-
-        <div class="col-sm mb-7 mb-sm-0">
-          <h5 class="text-white mb-3">Features</h5>
-
-          <!-- List -->
-          <ul class="list-unstyled list-py-1 mb-0">
-            <li><a class="link-sm link-light" href="#">Press <i class="bi-box-arrow-up-right small ms-1"></i></a></li>
-            <li><a class="link-sm link-light" href="#">Release Notes</a></li>
-            <li><a class="link-sm link-light" href="#">Integrations</a></li>
-            <li><a class="link-sm link-light" href="#">Pricing</a></li>
-          </ul>
-          <!-- End List -->
-        </div>
-        <!-- End Col -->
-
-        <div class="col-sm mb-7 mb-sm-0">
-          <h5 class="text-white mb-3">Documentation</h5>
-
-          <!-- List -->
-          <ul class="list-unstyled list-py-1 mb-0">
-            <li><a class="link-sm link-light" href="#">Support</a></li>
-            <li><a class="link-sm link-light" href="#">Docs</a></li>
-            <li><a class="link-sm link-light" href="#">Status</a></li>
-            <li><a class="link-sm link-light" href="#">API Reference</a></li>
-            <li><a class="link-sm link-light" href="#">Tech Requirements</a></li>
-          </ul>
-          <!-- End List -->
-        </div>
-        <!-- End Col -->
-
-        <div class="col-sm">
-          <h5 class="text-white mb-3">Resources</h5>
-
-          <!-- List -->
-          <ul class="list-unstyled list-py-1 mb-5">
-            <li><a class="link-sm link-light" href="#"><i class="bi-question-circle-fill me-1"></i> Help</a></li>
-            <li><a class="link-sm link-light" href="#"><i class="bi-person-circle me-1"></i> Your Account</a></li>
-          </ul>
-          <!-- End List -->
-        </div>
-        <!-- End Col -->
-      </div>
-      <!-- End Row -->
-
-    </div>
+    {{ include('@imparables_bb5/custom/footer.html.twig') }}
 
       {% block footer %}
         <div class="{{ container }}">
