--- a/web/themes/custom/imparables_bb5/templates/layout/html.html.twig
+++ b/web/themes/custom/imparables_bb5/templates/layout/html.html.twig
@@ -334,6 +334,11 @@
             prevEl: '.js-swiper-course-hero-button-prev',
           },
           slidesPerView: 1,
+          autoplay: true,
+          autoplay: {
+            disableOnInteraction: false,
+            pauseOnMouseEnter: true,
+          },
           loop: 1,
           breakpoints: {
             380: {
@@ -361,56 +366,6 @@
           }
         });
 
-      // INITIALIZATION OF SWIPER
-      // =======================================================
-      function loadImage( path ) {
-        return new Promise(function (resolve) {
-          const img = new Image()
-
-          img.addEventListener('load', () => {
-            resolve()
-          })
-
-          img.src = path.replace(/url\(\"(.*?)\"\)/g, '$1')
-        })
-      }
-
-      const $preloader = document.querySelector('.js-swiper-preloader')
-      const promises = [...document.querySelectorAll('.js-swiper-slide-preload')]
-              .map(slide => loadImage(window.getComputedStyle(slide).backgroundImage))
-
-      Promise.all(promises)
-              .then(() => {
-                $preloader.remove()
-
-                var sliderThumbs = new Swiper('.js-swiper-blog-journal-hero-thumbs', {
-                  direction: 'vertical',
-                  watchSlidesVisibility: true,
-                  watchSlidesProgress: true,
-                  slidesPerView: 3,
-                  history: false,
-                  on: {
-                    'afterInit': function (swiper) {
-                      swiper.el.style.opacity = 1
-                      swiper.el.querySelectorAll('.js-swiper-pagination-progress-body-helper')
-                              .forEach($progress => $progress.style.transitionDuration = `${swiper.params.autoplay.delay}ms`)
-                    }
-                  }
-                });
-
-                var swiper = new Swiper('.js-swiper-blog-journal-hero',{
-                  effect: 'fade',
-                  autoplay: true,
-                  loop: true,
-                  pagination: {
-                    el: '.js-swiper-blog-journal-hero-pagination',
-                    clickable: true,
-                  },
-                  thumbs: {
-                    swiper: sliderThumbs
-                  }
-                });
-              })
 
    
 
