--- a/web/themes/custom/imparables_bb5/templates/user_forms/nice-login--login.html.twig
+++ b/web/themes/custom/imparables_bb5/templates/user_forms/nice-login--login.html.twig
@@ -19,8 +19,8 @@
   <div class="flex-grow-1 mx-auto" style="max-width: 28rem;">
     <!-- Heading -->
     <div class="text-center mb-5 mb-md-7">
-      <h1 class="h2">Welcome back</h1>
-      <p>Login to manage your account.</p>
+      <h1 class="h2">Iniciar sesión</h1>
+      <p>Ingresa tu correo electrónico y contraseña.</p>
     </div>
     <!-- End Heading -->
 
@@ -43,18 +43,17 @@
         Iniciar sesión con Google
       </span>
     </a>
+    <!--
     <a class="btn btn-white btn-lg" href="/user/login/facebook">
       <span class="d-flex justify-content-center align-items-center">
         <img class="avatar avatar-xss me-2" src="/themes/custom/imparables_bb5/assets/svg/brands/facebook-icon.svg" alt="Image Description">
         Iniciar sesión con Facebook
       </span>
-    </a>
+    </a>-->
 
   </div>
 </div>
 <!-- End Form -->
-
-
 
 
 {{ form|without('name', 'pass', 'actions', 'reset_password_link', 'register_link') }}
