--- a/web/themes/custom/imparables_bb5/templates/user_forms/nice-login--pass.html.twig
+++ b/web/themes/custom/imparables_bb5/templates/user_forms/nice-login--pass.html.twig
@@ -18,8 +18,8 @@
   <div class="flex-grow-1 mx-auto" style="max-width: 28rem;">
     <!-- Heading -->
     <div class="text-center mb-5 mb-md-7">
-      <h1 class="h2">Forgot password?</h1>
-      <p>Enter your email address below and we'll get you back on track.</p>
+      <h1 class="h2">¿Olvidaste tu contraseña?</h1>
+      <p>Ingresa tu correo electrónico para volver a generar una nueva contraseña.</p>
     </div>
     <!-- End Heading -->
 
@@ -32,28 +32,6 @@
 
     {{ form.login_link }}
 
-    <!-- Form -->
-    <form class="js-validate needs-validation" novalidate>
-      <!-- Form -->
-      <div class="mb-3">
-        <div class="d-flex justify-content-between align-items-center">
-          <label class="form-label" for="signupSimpleResetPasswordEmail" tabindex="0">Your email</label>
-
-          <a class="form-label-link" href="../page-login-simple.html">
-            <i class="bi-chevron-left small ms-1"></i> Back to Log in
-          </a>
-        </div>
-
-        <input type="email" class="form-control form-control-lg" name="email" id="signupSimpleResetPasswordEmail" tabindex="1" placeholder="Enter your email address" aria-label="Enter your email address" required>
-        <span class="invalid-feedback">Please enter a valid email address.</span>
-      </div>
-      <!-- End Form -->
-
-      <div class="d-grid mb-3">
-        <button type="submit" class="btn btn-primary btn-lg">Submit</button>
-      </div>
-    </form>
-    <!-- End Form -->
   </div>
 </div>
 <!-- End Form -->
