--- a/web/themes/custom/imparables_bb5/templates/user_forms/nice-login--register.html.twig
+++ b/web/themes/custom/imparables_bb5/templates/user_forms/nice-login--register.html.twig
@@ -17,8 +17,8 @@
   <div class="flex-grow-1 mx-auto" style="max-width: 28rem;">
     <!-- Heading -->
     <div class="text-center mb-5 mb-md-7">
-      <h1 class="h2">Welcome to Front</h1>
-      <p>Fill out the form to get started.</p>
+      <h1 class="h2">Registro de usuario </h1>
+      <p>Por favor ingresa tus datos para poder registrarte.</p>
     </div>
     <!-- End Heading -->
 
@@ -28,83 +28,6 @@
       {{ form.login_link }}
     </div>
 
-    <!-- Form -->
-    <form class="js-validate needs-validation" novalidate>
-      <!-- Form -->
-      <div class="mb-3">
-        <label class="form-label" for="signupSimpleSignupEmail">Your email</label>
-        <input type="email" class="form-control form-control-lg" name="email" id="signupSimpleSignupEmail" placeholder="email@site.com" aria-label="email@site.com" required>
-        <span class="invalid-feedback">Please enter a valid email address.</span>
-      </div>
-      <!-- End Form -->
-
-    <a class="btn btn-white btn-lg" href="#">
-      <span class="d-flex justify-content-center align-items-center">
-        <img class="avatar avatar-xss me-2" src="/themes/custom/imparables_bb5/assets/svg/brands/google-icon.svg" alt="Image Description">
-        Log in with Google
-      </span>
-    </a>
-
-      <!-- Form -->
-      <div class="mb-3">
-        <label class="form-label" for="signupSimpleSignupPassword">Password</label>
-
-        <div class="input-group input-group-merge" data-hs-validation-validate-class>
-          <input type="password" class="js-toggle-password form-control form-control-lg" name="password" id="signupSimpleSignupPassword" placeholder="8+ characters required" aria-label="8+ characters required" required
-                  data-hs-toggle-password-options='{
-                     "target": [".js-toggle-password-target-1", ".js-toggle-password-target-2"],
-                     "defaultClass": "bi-eye-slash",
-                     "showClass": "bi-eye",
-                     "classChangeTarget": ".js-toggle-passowrd-show-icon-1"
-                   }'>
-          <a class="js-toggle-password-target-1 input-group-append input-group-text" href="javascript:;">
-            <i class="js-toggle-passowrd-show-icon-1 bi-eye"></i>
-          </a>
-        </div>
-
-        <span class="invalid-feedback">Your password is invalid. Please try again.</span>
-      </div>
-      <!-- End Form -->
-
-      <!-- Form -->
-      <div class="mb-3">
-        <label class="form-label" for="signupSimpleSignupConfirmPassword">Confirm password</label>
-
-        <div class="input-group input-group-merge" data-hs-validation-validate-class>
-          <input type="password" class="js-toggle-password form-control form-control-lg" name="confirmPassword" id="signupSimpleSignupConfirmPassword" placeholder="8+ characters required" aria-label="8+ characters required" required
-                 data-hs-validation-equal-field="#signupSimpleSignupPassword"
-                  data-hs-toggle-password-options='{
-                   "target": [".js-toggle-password-target-1", ".js-toggle-password-target-2"],
-                   "defaultClass": "bi-eye-slash",
-                   "showClass": "bi-eye",
-                   "classChangeTarget": ".js-toggle-passowrd-show-icon-2"
-                 }'>
-           <a class="js-toggle-password-target-2 input-group-append input-group-text" href="javascript:;">
-            <i class="js-toggle-passowrd-show-icon-2 bi-eye"></i>
-          </a>
-        </div>
-
-        <span class="invalid-feedback">Password does not match the confirm password.</span>
-      </div>
-      <!-- End Form -->
-
-      <!-- Check -->
-      <div class="form-check mb-3">
-        <input type="checkbox" class="form-check-input" id="signupHeroFormPrivacyCheckEg1" name="signupFormPrivacyCheck" required>
-        <label class="form-check-label small" for="signupHeroFormPrivacyCheckEg1"> By submitting this form I have read and acknowledged the <a href=../page-privacy.html>Privacy Policy</a></label>
-        <span class="invalid-feedback">Please accept our Privacy Policy.</span>
-      </div>
-      <!-- End Check -->
-
-      <div class="d-grid mb-3">
-        <button type="submit" class="btn btn-primary btn-lg">Sign up</button>
-      </div>
-
-      <div class="text-center">
-        <p>Already have an account? <a class="link" href="../page-login-simple.html">Log in here</a></p>
-      </div>
-    </form>
-    <!-- End Form -->
   </div>
 </div>
 <!-- End Form -->
