--- a/web/themes/custom/imparables_bb5/templates/layout/page--user--register--apoderado.html.twig
+++ b/web/themes/custom/imparables_bb5/templates/layout/page--user--register--apoderado.html.twig
@@ -105,6 +105,33 @@
                   <a href="#main-content" id="main-content" tabindex="-1"></a>
 
 
+<div class="w-md-75 w-lg-50 text-center mx-md-auto mb-5 mb-md-9">
+        
+              </div>
+                <div class="text-center flex-grow-1 mx-auto" style="max-width: 28rem;">
+                <h4 class="">Registrarme como:</h4>
+                </div>
+
+<div class="js-nav-scroller hs-nav-scroller-horizontal">
+
+
+                <!-- Nav -->
+                <ul class="nav nav-segment nav-pills nav-fill mx-auto mb-7" id="featuresEg1Tab" role="" style="max-width: 30rem;">
+                  <li class="nav-item" role="presentation">
+                    <a class="nav-link " href="/registro/estudiante" id="featuresEg1One-tab"   role="tab" aria-controls="featuresEg1One" aria-selected="true">Estudiante</a>
+                  </li>
+
+                  <li class="nav-item" role="presentation">
+                    <a class="nav-link active" href="/registro/apoderado" id="featuresEg1Two-tab"   role="tab" aria-controls="featuresEg1Two" aria-selected="false" tabindex="-1">Padre o Apoderado</a>
+                  </li>
+
+                  <li class="nav-item" role="presentation">
+                    <a class="nav-link" href="#featuresThree" id="featuresEg1Three-tab"   role="tab" aria-controls="featuresEg1Three" aria-selected="false" tabindex="-1">Institución Educativa</a>
+                  </li>
+                </ul>
+                <!-- End Nav -->
+              </div>
+
                   {{ page.content }}
 
 
