--- a/web/themes/custom/imparables_bb5/templates/user_forms/nice-login--register.html.twig
+++ b/web/themes/custom/imparables_bb5/templates/user_forms/nice-login--register.html.twig
@@ -20,10 +20,10 @@
     <div class="text-center mb-5 mb-md-7">
 
     {% if form.estudiante_profiles is defined  %}
-        <h1 class="h2">Registro de Estudiante</h1>
+      <h1 class="h2">Registro de Estudiante</h1>
     {% endif %}
     {% if form.apoderado_profiles is defined %}
-        <h1 class="h2">Registro de Padres<br> o Apoderado</h1>
+        <h1 class="h2">Registro de Padre o Apoderado</h1>
     {% endif %}    
       <p>Ingresa tus datos para poder crear tu cuenta.</p>
     </div>
