--- a/web/themes/custom/imparables_bb5/css/style.css
+++ b/web/themes/custom/imparables_bb5/css/style.css
@@ -33,6 +33,8 @@ footer a {
 
 .wrapper-nice-login {
     border: unset !important;
+    margin-top: 0px !important;
+    padding-top: 0px !important;
 }
 
 .node--view-mode-teaser {
