--- a/web/themes/custom/imparables_bb5/templates/layout/page--user--register--estudiante.html.twig
+++ b/web/themes/custom/imparables_bb5/templates/layout/page--user--register--estudiante.html.twig
@@ -108,7 +108,7 @@
         
               </div>
                 <div class="text-center flex-grow-1 mx-auto" style="max-width: 28rem;">
-                <h4 class="">Registrarme como:</h4>
+                <label class="">Registrarme como:</label>
                 </div>
 
 <div class="js-nav-scroller hs-nav-scroller-horizontal">
