--- a/web/themes/custom/imparables_bb5/templates/user_forms/nice-login--login.html.twig
+++ b/web/themes/custom/imparables_bb5/templates/user_forms/nice-login--login.html.twig
@@ -18,7 +18,7 @@
 <div class="container">
   <div class="flex-grow-1 mx-auto" style="max-width: 28rem;">
     <!-- Heading -->
-    <div class="text-center mb-5 mb-md-7">
+    <div class="text-center mb-5 mb-md-5">
       <h1 class="h2">Iniciar sesión</h1>
       <p>Ingresa tu correo electrónico y contraseña.</p>
     </div>
@@ -49,6 +49,9 @@
         Iniciar sesión con Facebook
       </span>
     </a>-->
+    <div class="text-center">
+                <p>¿No te has registrado aún? <a class="link" href="/registro/estudiante">Regístrate aquí</a></p>
+              </div>
 
   </div>
 </div>
