--- a/web/themes/custom/imparables_bb5/templates/user_forms/nice-login--pass.html.twig
+++ b/web/themes/custom/imparables_bb5/templates/user_forms/nice-login--pass.html.twig
@@ -17,9 +17,9 @@
 <div class="container">
   <div class="flex-grow-1 mx-auto" style="max-width: 28rem;">
     <!-- Heading -->
-    <div class="text-center mb-5 mb-md-7">
+    <div class="text-center mb-5 mb-md-5">
       <h1 class="h2">¿Olvidaste tu contraseña?</h1>
-      <p>Ingresa tu correo electrónico para volver a generar una nueva contraseña.</p>
+      <p>Ingresa tu nombre de usuario o correo electrónico .</p>
     </div>
     <!-- End Heading -->
 
