fix register phone number

--- a/web/themes/custom/imparables_bb5/css/style.css
+++ b/web/themes/custom/imparables_bb5/css/style.css
@@ -69,6 +69,7 @@ form .error {
 
 .field--type-phone-number label {
     float: left !important;
+    width: 100% !important;
 }
 
 .page-user-register #edit-mail--description {
