--- a/web/themes/custom/imparables_bb5/templates/user_forms/nice-login--pass.html.twig
+++ b/web/themes/custom/imparables_bb5/templates/user_forms/nice-login--pass.html.twig
@@ -30,7 +30,10 @@
       {{ form.actions }}
     </div>
 
-    {{ form.login_link }}
+    <div class="text-center d-grid gap-3">
+      <span class="divider-center">O</span>
+      <p>¿Ya te registraste? <a class="link" href="/user/login">Inicia sesión</a></p>
+    </div>
 
   </div>
 </div>
