--- a/web/themes/custom/imparables_bb5/templates/user_forms/nice-login--register.html.twig
+++ b/web/themes/custom/imparables_bb5/templates/user_forms/nice-login--register.html.twig
@@ -21,12 +21,25 @@
       {{ form.actions }}
     </div>
 
+    <div class="text-center d-grid gap-3">
+      <span class="divider-center">O</span>
+
+      <a class="btn btn-white btn-lg" href="/user/login/google">
+        <span class="d-flex justify-content-center align-items-center">
+          <img class="avatar avatar-xss me-2" src="/themes/custom/imparables_bb5/assets/svg/brands/google-icon.svg" alt="Image Description">
+          Registrarme con Google
+        </span>
+      </a>
+            <p>¿Ya te registraste? <a class="link" href="/user/login">Inicia sesión</a></p>
+
+    </div>
+
   </div>
 
 
 </div>
-
-
 <!-- End Form -->
+
+
 
 
